fix(swiper): fix scrollbars, grid, close modal handler

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,42 @@ body {
     /*font-family: Consolas;*/
     /*font-family: Poppins-Regular;*/
 }
+/*scrollbar styles*/
+body::-webkit-scrollbar {
+  width: 1vw;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(37, 35, 35);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgb(87, 84, 84);
+}
+/* W3C standard
+   сейчас только для Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(222, 217, 217, 0.5) rgba(243, 237, 237, 0.3);
+}
+
+*::-webkit-scrollbar {
+  width: 1.2vw;
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(243, 237, 237, 0.3);
+  /*-webkit-box-shadow: inset 0 0 6px rgb(37, 35, 35);*/
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(222, 217, 217, 0.5);
+}
+
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
